[package]
name = "twitter-api-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
derive_builder = "0.11.2"
dotenv = "0.15.0"
futures = "0.3.24"
rand = "0.8.5"
reqwest = {version="0.11.11", features = ["json"]}
serde = {version ="1.0.144", features = ["derive"]}
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
tokio = {version = "1.20.1", features = ["full"]}


